peac_dev/force-app/main/default/objects/Guarantor__c/Guarantor__c.object-meta.xml
<CustomObject>
    <label>Guarantor</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Guarantor Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guarantors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>