peac_dev/force-app/main/default/objects/Guarantor__c/fields/Billing_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Billing_ZipCode__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing ZipCode</label>
    <type>Text</type>
</CustomField>