peac_dev/force-app/main/default/objects/Guarantor__c/fields/Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone__c</fullName>
    <formula>Account__r.Business_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Phone</label>
    <type>Text</type>
</CustomField>