peac_dev/force-app/main/default/objects/Guarantor__c/fields/CCG_Business_Rules__c.field-meta.xml
<CustomField>
    <fullName>CCG_Business_Rules__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCG Business Rules</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>