peac_dev/force-app/main/default/objects/Guarantor__c/fields/CRA_Lien_Judgments_Total__c.field-meta.xml
<CustomField>
    <fullName>CRA_Lien_Judgments_Total__c</fullName>
    <label>CRA Lien &amp; Judgments Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>