peac_dev/force-app/main/default/objects/Guarantor__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <formula>Contact__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOB</label>
    <type>Date</type>
</CustomField>