peac_dev/force-app/main/default/objects/Guarantor__c/fields/DOB_From_UDA_Portal__c.field-meta.xml
<CustomField>
    <fullName>DOB_From_UDA_Portal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DOB From UDA Portal</label>
    <type>Date</type>
</CustomField>