peac_dev/force-app/main/default/objects/Guarantor__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <description>&amp;&quot;,&quot;&amp; Home_City__c &amp;&quot;,&quot;&amp; Billing_State__c &amp;&quot;,&quot;&amp; Home_Postal_Code__c</description>
    <formula>IF( RecordType.Name = &quot;Personal&quot;,  Contact__r.MailingStreet &amp;&quot;,&quot;&amp;   Contact__r.MailingCity  &amp;&quot;,&quot;&amp;  Contact__r.MailingState  &amp;&quot;,&quot;&amp;   Contact__r.MailingPostalCode,   Account__r.Business_Address__c  &amp;&quot;,&quot;&amp;  Account__r.Business_City__c  &amp;&quot;,&quot;&amp;  TEXT( Account__r.Business_State__c ) &amp;&quot;,&quot;&amp;   Account__r.Business_Zip__c  )</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>