peac_dev/force-app/main/default/objects/Guarantor__c/fields/Guarantor_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Guarantor External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>