peac_dev/force-app/main/default/objects/Guarantor__c/fields/Guarantor_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guarantor Name</label>
    <type>Text</type>
</CustomField>