peac_dev/force-app/main/default/objects/Guarantor__c/fields/Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Address from UDA Portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>