peac_dev/force-app/main/default/objects/Guarantor__c/fields/Home_City__c.field-meta.xml
<CustomField>
    <fullName>Home_City__c</fullName>
    <formula>Contact__r.OtherCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home City</label>
    <type>Text</type>
</CustomField>