peac_dev/force-app/main/default/objects/Guarantor__c/fields/Home_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Home_Postal_Code__c</fullName>
    <formula>Contact__r.OtherPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Postal Code</label>
    <type>Text</type>
</CustomField>