peac_dev/force-app/main/default/objects/Guarantor__c/fields/Home_State__c.field-meta.xml
<CustomField>
    <fullName>Home_State__c</fullName>
    <formula>Text(Contact__r.OtherStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home State</label>
    <type>Text</type>
</CustomField>