peac_dev/force-app/main/default/objects/Guarantor__c/fields/Home_Street__c.field-meta.xml
<CustomField>
    <fullName>Home_Street__c</fullName>
    <formula>Contact__r.OtherStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Street</label>
    <type>Text</type>
</CustomField>