peac_dev/force-app/main/default/objects/Guarantor__c/fields/Included_in_Last_Score__c.field-meta.xml
<CustomField>
    <fullName>Included_in_Last_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL-2317</description>
    <inlineHelpText>If this box is checked, it indicates that the guarantor was included in the last scoring run</inlineHelpText>
    <label>Included in Last Score</label>
    <type>Checkbox</type>
</CustomField>