peac_dev/force-app/main/default/objects/Guarantor__c/fields/Inquiries_in_last_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Inquiries_in_last_6_Months__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>#Inquiries in last 6 Months</label>
    <length>20</length>
    <type>Text</type>
</CustomField>