peac_dev/force-app/main/default/objects/Guarantor__c/fields/Latest_Rescore_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Rescore_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Rescore Date</label>
    <type>DateTime</type>
</CustomField>