peac_dev/force-app/main/default/objects/Guarantor__c/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <formula>Contact__r.MailingCountry</formula>
    <label>Mailing Country</label>
    <type>Text</type>
</CustomField>