peac_dev/force-app/main/default/objects/Guarantor__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <formula>Contact__r.MailingStreet</formula>
    <label>Mailing Street</label>
    <type>Text</type>
</CustomField>