peac_dev/force-app/main/default/objects/Guarantor__c/fields/Mailing_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_ZipCode__c</fullName>
    <formula>Contact__r.MailingPostalCode</formula>
    <label>Mailing ZipCode</label>
    <type>Text</type>
</CustomField>