peac_dev/force-app/main/default/objects/Guarantor__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <formula>Contact__r.Ownership_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>