peac_dev/force-app/main/default/objects/Guarantor__c/fields/PG_N__c.field-meta.xml
<CustomField>
    <fullName>PG_N__c</fullName>
    <formula>IF( TEXT( PG_Number__c )== &apos;PG1&apos;,1,  IF( TEXT( PG_Number__c )== &apos;PG2&apos;,2,  IF( TEXT( PG_Number__c )== &apos;PG3&apos;,3,  IF( TEXT( PG_Number__c )== &apos;PG4&apos;,4, 0) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PG N</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>