peac_dev/force-app/main/default/objects/Guarantor__c/fields/PG_Number__c.field-meta.xml
<CustomField>
    <fullName>PG_Number__c</fullName>
    <inlineHelpText>This PG number identifies the sequence of Guarantors.</inlineHelpText>
    <label>PG Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PG1</fullName>
            </value>
            <value>
                <fullName>PG2</fullName>
            </value>
            <value>
                <fullName>PG3</fullName>
            </value>
            <value>
                <fullName>PG4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>