peac_dev/force-app/main/default/objects/Guarantor__c/fields/PG_Utilization__c.field-meta.xml
<CustomField>
    <fullName>PG_Utilization__c</fullName>
    <label>PG Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>