peac_dev/force-app/main/default/objects/Guarantor__c/fields/PG_Vantage__c.field-meta.xml
<CustomField>
    <fullName>PG_Vantage__c</fullName>
    <label>PG Vantage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>