peac_dev/force-app/main/default/objects/Guarantor__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <formula>IF(Priority__c =1,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>