peac_dev/force-app/main/default/objects/Guarantor__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Rank the priority of the related guarantors. Rankings must be unique per type. If priority is set to 1, formula field checks off that guarantor as a primary guarantor.</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>