peac_dev/force-app/main/default/objects/Guarantor__c/fields/RP_PRIN_GUAR_CODE__c.field-meta.xml
<CustomField>
    <fullName>RP_PRIN_GUAR_CODE__c</fullName>
    <label>Guarantor Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
                <default>true</default>
                <label>Guarantor</label>
            </value>
            <value>
                <fullName>Corporate Guaranty</fullName>
            </value>
            <value>
                <fullName>Brokers Vendor</fullName>
            </value>
            <value>
                <fullName>Franchisors Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>