peac_dev/force-app/main/default/objects/Guarantor__c/fields/Scorex_Requested_or_Scorex_Hit__c.field-meta.xml
<CustomField>
    <fullName>Scorex_Requested_or_Scorex_Hit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scorex Requested or Scorex Hit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>