peac_dev/force-app/main/default/objects/Guarantor__c/fields/Shipping_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_ZipCode__c</fullName>
    <formula>Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping ZipCode</label>
    <type>Text</type>
</CustomField>