peac_dev/force-app/main/default/objects/Guarantor__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <formula>Contact__r.SSN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSN</label>
    <type>Text</type>
</CustomField>