peac_dev/force-app/main/default/objects/Guarantor__c/fields/SSN_From_UDA_Portal__c.field-meta.xml
<CustomField>
    <fullName>SSN_From_UDA_Portal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SSN From UDA Portal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>