peac_dev/force-app/main/default/objects/Guarantor__c/fields/Sync_To_GDS__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_GDS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine whether the PG value has already been sent from rescore or not.</description>
    <label>Sync To GDS</label>
    <type>Checkbox</type>
</CustomField>