peac_dev/force-app/main/default/objects/Guarantor__c/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <formula>Account__r.Tax_ID__c</formula>
    <label>Tax Id</label>
    <type>Text</type>
</CustomField>