peac_dev/force-app/main/default/objects/Guarantor__c/fields/Total_Trades__c.field-meta.xml
<CustomField>
    <fullName>Total_Trades__c</fullName>
    <label>Total Trades</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>